--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <meta name="fb:page.id" content="190310834386679">
-  <meta name="fb:page.name" content="190310834386679">
+  <meta name="fb:page.id" content="324056764118977">
+  <meta name="fb:page.name" content="freedisabled2.0">
+
+  <title>Facebook Link</title>
   <style>
     body {
       display: flex;
