--- a/taichungtax.html
+++ b/taichungtax.html
@@ -1,67 +1,37 @@
 <!DOCTYPE html>
 <html>
-
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <meta name="fb:page.id" content="100064670262799">
-  <meta name="fb:page.name" content="100064670262799">
   <title>Facebook Link</title>
   <style>
-    body {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      min-height: 100vh;
-    }
-
-    a {
-      margin: auto;
-    }
-
-    svg {
-      height: 300px;
-    }
+    body { display: flex; justify-content: center; align-items: center; min-height: 100vh; margin: 0; }
+    svg { height: 300px; cursor: pointer; }
   </style>
-  <script>
-    function osPattern(pattern) {
-      return new RegExp(pattern, 'i').test(navigator.userAgent) ? true : false;
-    }
-
-    function openFacebook() {
-      const id = document.querySelector('meta[name="fb:page.id"]').content
-
-      const isIOS = osPattern('\\biPhone.*Mobile|\\biPod|\\biPad|AppleCoreMedia')
-      if (isIOS) {
-        window.location = 'fb://page/?id=' + id
-      }
-
-      const isAndroid = osPattern('Android');
-      if (isAndroid) {
-        window.location = 'fb://page/' + id
-      }
-
-      const name = document.querySelector('meta[name="fb:page.name"]').content
-      setTimeout(function () {
-        window.location = 'https://facebook.com/' + name;
-      }, 1)
-    }
-
-    (function () {
-      openFacebook()
-    })();
-  </script>
 </head>
-
 <body>
-  <a href="javascript:openFacebook()">
-    <svg xmlns="http://www.w3.org/2000/svg"
-      viewBox="0 0 448 512"><!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
-      <path
-        d="M64 32C28.7 32 0 60.7 0 96V416c0 35.3 28.7 64 64 64h98.2V334.2H109.4V256h52.8V222.3c0-87.1 39.4-127.5 125-127.5c16.2 0 44.2 3.2 55.7 6.4V172c-6-.6-16.5-1-29.6-1c-42 0-58.2 15.9-58.2 57.2V256h83.6l-14.4 78.2H255V480H384c35.3 0 64-28.7 64-64V96c0-35.3-28.7-64-64-64H64z"
-        fill="#4267B2" />
-    </svg>
-  </a>
-</body>
+  <svg onclick="openFB()" viewBox="0 0 448 512" xmlns="http://www.w3.org/2000/svg">
+    <path d="M64 32C28.7 32 0 60.7 0 96V416c0 35.3 28.7 64 64 64h98.2V334.2H109.4V256h52.8V222.3c0-87.1 39.4-127.5 125-127.5c16.2 0 44.2 3.2 55.7 6.4V172c-6-.6-16.5-1-29.6-1c-42 0-58.2 15.9-58.2 57.2V256h83.6l-14.4 78.2H255V480H384c35.3 0 64-28.7 64-64V96c0-35.3-28.7-64-64-64H64z" fill="#4267B2"/>
+  </svg>
 
+  <script>
+    const fbId = "100064670262799";
+    const ua = navigator.userAgent;
+
+    function openFB() {
+      // 判斷 iOS 或 Android 並嘗試喚起 App
+      if (/iPhone|iPad|iPod/i.test(ua)) {
+        window.location = "fb://page/?id=" + fbId;
+      } else if (/Android/i.test(ua)) {
+        window.location = "fb://page/" + fbId;
+      }
+      
+      // 延遲後跳轉網頁版（若無 App 則執行此項）
+      setTimeout(() => { window.location = "https://facebook.com/" + fbId; }, 500);
+    }
+
+    // 頁面載入後自動執行
+    openFB();
+  </script>
+</body>
 </html>
